--- a/src/style.css
+++ b/src/style.css
@@ -25,6 +25,7 @@ body {
   align-items: center;
   }
 .layout {
+  overflow: hidden;
   box-sizing: border-box;
   display: grid;
   place-items: center;
@@ -41,7 +42,8 @@ body {
   'result';
   gap: 1rem;
   transition: background-position .3s linear;
-  background: linear-gradient(0deg, rgba(246,206,20,1) 0%, rgba(57,193,249,1) 10%, rgba(184,184,184,1) 15%, rgba(238,212,90,1) 18%, rgba(57,193,249,1) 25%, rgba(0,212,255,1) 100%);
+  background-color: cadetblue;
+  /* background: linear-gradient(0deg, rgba(246,206,20,1) 0%, rgba(57,193,249,1) 10%, rgba(184,184,184,1) 15%, rgba(238,212,90,1) 18%, rgba(57,193,249,1) 25%, rgba(0,212,255,1) 100%); */
   background-size: 1100%;
   background-repeat: no-repeat;
   box-sizing: border-box;
@@ -64,6 +66,7 @@ body {
   background-position-y: 0%;
 }
 form {
+  border:10px solid;
   background-color: #fff;
   padding: .75rem;
   border-radius: .75rem;
@@ -73,10 +76,10 @@ form {
   grid-area: search;
   gap: .5rem;
   border: 3px solid rgb(172, 172, 172);
-  max-width: 50vw;
   align-self: end;
   margin: 0;
   padding: 0;
+  width: min(90vw, calc(800px - 6px));
   grid-template-areas: 'text submit';
 }
 
@@ -91,9 +94,7 @@ form input[type="text"] {
   outline: transparent;
   color: var(--main-color-search)
 }
-form input[type="text"]::first-letter {
-  text-transform: uppercase;
-}
+
 form input[type="text"]::placeholder {
   color: var(--color-search)
 }
@@ -109,6 +110,7 @@ form input[type="submit"] {
   background: none;
 }
 .weatherResponse {
+  
   background-color: #fff;
   font-size: 1.5rem;
   grid-area: result;
@@ -134,12 +136,45 @@ gap: .25rem;
   font-size: 1.5rem;
   color: rgb(245, 53, 53);
   border-radius: .75rem;
-  width: calc(100% - 2rem);
+  width: calc(50vw - 3.5rem);
   align-self: start;
   margin: 0;
-  padding: 0;
+  padding: 1rem;
+}
+.loader, .loader:before, .loader:after {
+  border-radius: 50%;
+  width: 2.5em;
+  height: 2.5em;
+  animation-fill-mode: both;
+  animation: bblFadInOut 1.8s infinite ease-in-out;
+}
+.loader {
+  color: #FFF;
+  font-size: 7px;
+  position: relative;
+  text-indent: -9999em;
+  transform: translateZ(0);
+  animation-delay: -0.16s;
+}
+.loader:before,
+.loader:after {
+  content: '';
+  position: absolute;
+  top: 0;
+}
+.loader:before {
+  left: -3.5em;
+  animation-delay: -0.32s;
+}
+.loader:after {
+  left: 3.5em;
 }
 
+@keyframes bblFadInOut {
+  0%, 80%, 100% { box-shadow: 0 2.5em 0 -1.3em }
+  40% { box-shadow: 0 2.5em 0 0 }
+}
+    
 #app {
   margin: 0;
   padding: 0;
