--- a/src/style.css
+++ b/src/style.css
@@ -62,38 +62,41 @@ body {
   background-position-y: 0%;
 }
 form {
-  /* border:10px solid; */
   background-color: #ffffff;
   padding: 1rem;
   border-radius: .75rem;
   display: grid;
+  align-items: center;
   grid-template-columns: 1fr 4rem 4rem;
   grid-template-rows: 1fr;
   grid-area: search;
   gap: .5rem;
-  /* border: 3px solid rgb(172, 172, 172); */
   align-self: end;
   height: 70px;
   margin: 0;
-  padding: 0;
+  padding: .5rem;
   width: min(90vw, 800px);
   grid-template-areas: 'text loader submit';
+  
 }
 form div {
   height: 100%;
   display: flex;
-  margin-top: 25%;
   justify-content: center;
+  border: 1px solid black;
+  border-radius: .5rem;
+  margin:auto 0;
 }
 form input[type="text"] {
   background-color: #fff;
-  width:100%;
+  /* width:90%; */
+  height: 100%;
   grid-area: text;
   font-size: 2rem;
-  border-radius: .85rem;
-  padding: 1rem;
-  border: none;
-  outline: transparent;
+  padding: 0 .5rem;
+  /* border: none; */
+  border-radius: .5rem;
+  border: 1px solid black;
   color: var(--main-color-search)
 }
 /* form input[type="text"]::first-letter {
@@ -105,14 +108,15 @@ form input[type="text"]::placeholder {
 }
 
 form input[type="submit"] {
+  border-radius: .5rem;
   grid-area: submit;
   font-size: 2rem;
-  border-radius: 50%;
-  border: none;
+  /* border: none; */
   width: 4rem;
-  height: 4rem;
+  height: 100%;
   cursor: pointer;
   background: none;
+  border: 1px solid black;
 }
 
 .weatherResponse {
@@ -160,6 +164,7 @@ margin: 0;
   padding: 1rem;
 }
 .loader, .loader:before, .loader:after {
+  margin-top: calc(100% - 3rem);
   border-radius: 50%;
   width: 2.5em;
   height: 2.5em;
@@ -167,6 +172,10 @@ margin: 0;
   animation: bblFadInOut 1.8s infinite ease-in-out;
 }
 .loader {
+  display: flex;
+  align-items: end;
+  justify-content: center;
+  flex-direction: row;
   color: #c71e1e;
   font-size: 5px;
   position: relative;
@@ -178,7 +187,7 @@ margin: 0;
 .loader:after {
   content: '';
   position: absolute;
-  top: 0;
+  /* top: 0; */
 }
 .loader:before {
   left: -3.5em;
