--- a/src/style.css
+++ b/src/style.css
@@ -43,8 +43,6 @@ body {
   gap: 1rem;
   transition: background-position .3s linear;
   background-color: cadetblue;
-  background-size: 1100%;
-  background-repeat: no-repeat;
   box-sizing: border-box;
 }
 .rain,
@@ -62,16 +60,16 @@ body {
   background-position-y: 0%;
 }
 form {
-  /* border:10px solid; */
+  border:1px solid;
   background-color: #ffffff;
-  padding: 1rem;
   border-radius: .75rem;
   display: grid;
   align-items: center;
+  align-content: center;
   grid-template-columns: 1fr 4rem 4rem;
   grid-template-rows: 1fr;
   grid-area: search;
-  gap: .5rem;
+  column-gap: .5rem;
   align-self: end;
   height: 70px;
   margin: 0;
@@ -87,13 +85,12 @@ form div {
 }
 form input[type="text"] {
   background-color: #fff;
-  /* width:90%; */
-  height: 100%;
+  width:94%;
   grid-area: text;
   font-size: 2rem;
   border-radius: .85rem;
-  padding: 1rem;
-  border: none;
+  padding: 0 1rem;
+  border: 1px solid;
   outline: transparent;
   color: var(--main-color-search)
 }
@@ -112,7 +109,6 @@ form input[type="submit"] {
   border-radius: 50%;
   border: none;
   width: 4rem;
-  height: 100%;
   cursor: pointer;
   background: none;
   border: 1px solid black;
