--- a/src/style.css
+++ b/src/style.css
@@ -135,14 +135,17 @@ form input[type="submit"] {
   background-color: #fff;
   border: 1px solid;
 margin: 0;
-flex-shrink: 1;
+/* flex-shrink: 1;
 flex-grow: 1;
-flex-basis: auto;
+flex-basis: auto; */
+/* flex: 1 0 250px; */
+width: min(250px, 100%);
 height: 70px;
 border-radius: .5rem;
 font-size: 1rem;
 font-weight: 600;
 display: flex;
+flex-wrap: wrap;
 /* flex: 1; */
 align-items: center;
 flex-direction: row;
