--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,10 @@
 }
 
 body {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 500;
+    font-style: normal;
+  
   margin: 0;
   padding: 0;
   place-items: center;
@@ -36,11 +40,12 @@ body {
   margin: 0;
   padding: 0;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 1fr 72px 1fr;
   grid-template-areas: 
+  'favorite'
   'search'
   'result';
-  gap: 1rem;
+  gap: .25rem;
   transition: background-position .3s linear;
   background-color: cadetblue;
   box-sizing: border-box;
@@ -59,6 +64,23 @@ body {
 .clear {
   background-position-y: 0%;
 }
+.fav {
+  grid-template-areas: favorite;
+  /* border: 1px solid #000; */
+  width: min(calc(90vw - 2rem), 820px);
+  align-self: end;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  column-gap: .25rem;
+}
+.fav div {
+  flex: 1 0 auto;
+  border: 1px solid red;
+  border-radius: .75rem;
+  padding: .5rem;
+  height: 54px;
+}
 form {
   border:1px solid;
   background-color: #ffffff;
@@ -74,7 +96,7 @@ form {
   height: 70px;
   margin: 0;
   padding: 0 1rem;
-  width: min(calc(90vw - 2rem), calc(800px - 2rem));
+  width: min(calc(90vw - 2rem), calc(820px - 2rem));
   grid-template-areas: 'text loader submit';
   
 }
@@ -126,10 +148,10 @@ form input[type="submit"] {
   flex-wrap: wrap;
   border-radius: .75rem;
   color: var(--color-resp);
-  width: min(90vw, 800px);
+  width: min(90vw, 820px);
   /* padding: .75rem; */
   align-self: start;
-  gap: 1rem;
+  gap: .25rem;
 }
 .weatherResponse div {
   background-color: #fff;
@@ -139,9 +161,9 @@ margin: 0;
 flex-grow: 1;
 flex-basis: auto; */
 /* flex: 1 0 250px; */
-width: min(250px, 100%);
+width: min(200px, 100%);
 height: 70px;
-border-radius: .5rem;
+border-radius: .75rem;
 font-size: 1rem;
 font-weight: 600;
 display: flex;
