--- a/src/style.css
+++ b/src/style.css
@@ -29,8 +29,21 @@ body {
   display: flex;
   align-items: center;
   }
+  .loader {
+    animation: loader 1s linear infinite
+  }
+  @keyframes loader {
+    0% {
+      box-shadow: 0px 0px 0px 0px rgba(34, 60, 80, 0.6);
+    }
+    50% {
+      box-shadow: 0px 0px 20px 0px rgba(34, 60, 80, 0.6);
+    }
+    100% {
+      box-shadow: 0px 0px 0px 0px rgba(34, 60, 80, 0.6);
+    }
+  }
 .layout {
-  box-shadow: 0px 0px 180px 80px rgba(98, 121, 139, 0.5) inset;
   overflow: hidden;
   box-sizing: border-box;
   display: grid;
@@ -47,7 +60,7 @@ body {
   'favorite'
   'search'
   'result';
-  gap: .25rem;
+  gap: 1rem;
   transition: background-position .3s linear;
   background-color: var(--bgc);
   box-sizing: border-box;
@@ -115,27 +128,28 @@ form {
   display: grid;
   align-items: center;
   align-content: center;
-  grid-template-columns: 1fr 4rem;
+  grid-template-columns: 1fr 48px;
   grid-template-rows: 1fr;
   grid-area: search;
   column-gap: .5rem;
   align-self: end;
   height: 70px;
   margin: 0;
-  padding: 0 1rem;
-  width: min(calc(90vw - 2rem), calc(820px - 2rem));
-  grid-template-areas: 'text loader submit';
+  padding: 0 .5rem;
+  width: min(calc(90vw - 1rem), calc(820px - 1rem));
+  grid-template-areas: 'text submit';
   
 }
 form div {
-  height: 100%;
   display: flex;
-  justify-content: center;
   align-items: center;
+  grid-area: submit;
 }
 form input[type="text"] {
   background-color: #fff;
+  box-sizing: border-box;
   width:auto;
+  height: 48px;
   grid-area: text;
   font-size: 2rem;
   border-radius: .5rem;
@@ -154,11 +168,13 @@ form input[type="text"]::placeholder {
 
 form input[type="submit"] {
   border-radius: .5rem;
-  grid-area: submit;
-  font-size: 1.75rem;
+  font-size: 1.5rem;
+  width: 48px;
+  height: 48px;
+  box-sizing: border-box;
   /* border-radius: 50%; */
+
   border: none;
-  width: 4rem;
   cursor: pointer;
   background: none;
   border: 1px solid black;
@@ -166,8 +182,10 @@ form input[type="submit"] {
 .cityFav {
   border-radius: 0.5rem;
   border: 1px solid #000;
-  height: 42px;
+  height: 48px;
+  width: 48px;
   transition: 0.3s linear;
+  box-sizing: border-box;
 }
 .cityFav:hover {
   background-color: rgba(55, 146, 221, 0.2);
@@ -236,42 +254,17 @@ margin: 0;
   margin: 0;
   padding: 1rem;
 }
-.loader, .loader:before, .loader:after {
-  margin-top: calc(100% - 3rem);
-  border-radius: 50%;
-  width: 2.5em;
-  height: 2.5em;
-  animation-fill-mode: both;
-  animation: bblFadInOut 1.8s infinite ease-in-out;
-}
-.loader {
-  display: flex;
-  align-items:center;
-  justify-content: center;
-  flex-direction: row;
-  color: var(--bgc);
-  font-size: 5px;
-  border: 1px solid red;
-  /* margin-top:50%; */
-  position: relative;
-  text-indent: -9999em;
-  transform: translateZ(0);
-  animation-delay: -0.16s;
-}
-.loader:before,
-.loader:after {
-  content: '';
-  top:2rem;
-  position: absolute;
-}
-.loader:before {
-  left: -3.5em;
-  animation-delay: -0.32s;
-}
-.loader:after {
-  left: 3.5em;
+
+
+.v-enter-active,
+.v-leave-active {
+  transition: opacity 0.5s ease;
 }
 
+.v-enter-from,
+.v-leave-to {
+  opacity: 0;
+}
 @keyframes bblFadInOut {
   0%, 80%, 100% { box-shadow: 0 2.5em 0 -1.3em }
   40% { box-shadow: 0 2.5em 0 0 }
