--- a/src/style.css
+++ b/src/style.css
@@ -65,23 +65,9 @@ body {
   background-color: var(--bgc);
   box-sizing: border-box;
 }
-.rain,
-.clouds,
-.clear {
-  transition: background-position .3s linear;
-}
-.rain {
-  background-position-y: 0 40%;
-}
-.clouds {
-  background-position-y: 15%;
-}
-.clear {
-  background-position-y: 0%;
-}
+
 .fav {
   grid-template-areas: favorite;
-  /* border: 1px solid #000; */
   width: min(calc(90vw - 2rem), 820px);
   align-self: end;
   display: flex;
@@ -91,7 +77,6 @@ body {
 }
 .fav div {
   flex: 0 1 20%;
-  border: 1px solid red;
   border-radius: .75rem;
   background-color: #fff;
   padding: .5rem;
@@ -106,7 +91,6 @@ body {
 .fav div p {
   width: 100%;
   text-align: center;
-  /* border: 1px solid; */
 }
 .fav div button {
   opacity: 0;
@@ -122,7 +106,6 @@ body {
   cursor: pointer;
 }
 form {
-  border:1px solid;
   background-color: #ffffff;
   border-radius: .75rem;
   display: grid;
@@ -148,20 +131,17 @@ form div {
 form input[type="text"] {
   background-color: #fff;
   box-sizing: border-box;
+  padding: 0 .5rem;
   width:auto;
   height: 48px;
   grid-area: text;
   font-size: 2rem;
   border-radius: .5rem;
-  /* padding: 0 1rem; */
-  border: 1px solid;
-  outline: transparent;
+  outline-color: rgba(148, 148, 148, 0.6);
+  border: transparent;
   color: var(--main-color-search)
 }
-/* form input[type="text"]::first-letter {
-  text-transform: uppercase;
-  color: red;
-} */
+
 form input[type="text"]::placeholder {
   color: var(--color-search)
 }
@@ -172,16 +152,14 @@ form input[type="submit"] {
   width: 48px;
   height: 48px;
   box-sizing: border-box;
-  /* border-radius: 50%; */
 
   border: none;
   cursor: pointer;
   background: none;
-  border: 1px solid black;
 }
 .cityFav {
   border-radius: 0.5rem;
-  border: 1px solid #000;
+  border: none;
   height: 48px;
   width: 48px;
   transition: 0.3s linear;
@@ -191,10 +169,12 @@ form input[type="submit"] {
   background-color: rgba(55, 146, 221, 0.2);
   cursor: pointer;
 }
+.response {
+  align-self: start;
+}
 .weatherResponse {
   display: flex;
   flex-direction: row;
-  border: 1px solid;
   align-items: center;
   justify-items:space-between;
   justify-content:space-between;
@@ -204,44 +184,34 @@ form input[type="submit"] {
   border-radius: .75rem;
   color: var(--color-resp);
   width: min(90vw, 820px);
-  /* padding: .75rem; */
-  align-self: start;
+  
   gap: .25rem;
 }
 .weatherResponse div {
   background-color: #fff;
-  border: 1px solid;
-margin: 0;
-/* flex-shrink: 1;
-flex-grow: 1;
-flex-basis: auto; */
-/* flex: 1 0 250px; */
-width: min(200px, 100%);
-height: 70px;
-border-radius: .75rem;
-font-size: 1rem;
-font-weight: 600;
-display: flex;
-flex-wrap: wrap;
-/* flex: 1; */
-align-items: center;
-flex-direction: row;
-justify-content: center;
+  margin: 0;
+  width: min(200px, 100%);
+  height: 70px;
+  border-radius: .75rem;
+  font-size: 1rem;
+  font-weight: 600;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  flex-direction: row;
+  justify-content: center;
 }
 .weatherResponse div p{
 padding: 0;
-border: 1px solid;
 margin: 0;
 }
 .weatherResponse div p::first-letter {
   text-transform: uppercase;
 }
 .weatherResponse svg {
-  /* display: block; */
-  border:1px solid;
+ 
 }
 .weatherResponse div img {
-  border:1px solid;
   width: 2.5rem;
 }
 .error {
