--- a/src/style.css
+++ b/src/style.css
@@ -77,6 +77,7 @@ body {
   flex-wrap: wrap;
   justify-content: flex-start;
   column-gap: 3.74%;
+  color: #444
 }
 .fav div {
   flex: 0 1 20%;
@@ -161,6 +162,8 @@ form input[type="submit"] {
   background: none;
 }
 .cityFav {
+  position: absolute;
+  background-color: transparent;
   border-radius: 0.5rem;
   border: none;
   height: 48px;
@@ -211,9 +214,7 @@ margin: 0;
 .weatherResponse div p::first-letter {
   text-transform: uppercase;
 }
-.weatherResponse svg {
- 
-}
+
 .weatherResponse div img {
   width: 2.5rem;
 }
