--- a/src/style.css
+++ b/src/style.css
@@ -30,7 +30,7 @@ body {
   align-items: center;
   }
   .loader {
-    animation: loader 1s linear infinite
+    animation: loader 1s linear infinite;
   }
   @keyframes loader {
     0% {
@@ -65,6 +65,9 @@ body {
   background-color: var(--bgc);
   box-sizing: border-box;
 }
+.waiting {
+  cursor: wait
+}
 
 .fav {
   font-family: "Montserrat Alternates", serif;
@@ -76,11 +79,11 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  column-gap: 3.74%;
+  column-gap: 1.125rem;
   color: #444
 }
 .fav div {
-  flex: 0 1 20%;
+  flex: 0 1 21.4%;
   border-radius: .75rem;
   background-color: #fff;
   padding: .5rem;
@@ -95,6 +98,7 @@ body {
 .fav div p {
   width: 100%;
   text-align: center;
+  line-clamp: 3;
 }
 .fav div button {
   opacity: 0;
@@ -127,11 +131,6 @@ form {
   grid-template-areas: 'text submit';
   
 }
-form div {
-  display: flex;
-  align-items: center;
-  grid-area: submit;
-}
 form input[type="text"] {
   background-color: #fff;
   box-sizing: border-box;
@@ -151,32 +150,45 @@ form input[type="text"]::placeholder {
 }
 
 form input[type="submit"] {
-  border-radius: .5rem;
   font-size: 1.5rem;
   width: 48px;
   height: 48px;
   box-sizing: border-box;
-
   border: none;
-  cursor: pointer;
   background: none;
+  cursor: pointer;
+}
+
+form div {
+  display: flex;
+  align-items: center;
+  grid-area: submit;
+  background-color: transparent;
+  border-radius: .5rem;
+  position: relative;
+  transition: 0.3s linear;
+}
+form div:hover {
+  background-color: rgba(55, 146, 221, 0.2);
 }
 .cityFav {
+  cursor: pointer;
   position: absolute;
   background-color: transparent;
-  border-radius: 0.5rem;
   border: none;
   height: 48px;
   width: 48px;
-  transition: 0.3s linear;
   box-sizing: border-box;
-}
-.cityFav:hover {
-  background-color: rgba(55, 146, 221, 0.2);
-  cursor: pointer;
+  display: flex;
+  align-items: center;
 }
 .response {
   align-self: start;
+  display: grid;
+  position: relative;
+  grid-area: result;
+  width: min(90vw, 820px);
+  height: 72px;
 }
 .weatherResponse {
   display: flex;
@@ -185,32 +197,32 @@ form input[type="submit"] {
   justify-items:space-between;
   justify-content:space-between;
   font-size: 1.5rem;
-  grid-area: result;
   flex-wrap: wrap;
   border-radius: .75rem;
   color: var(--color-resp);
-  width: min(90vw, 820px);
-  
   gap: .25rem;
 }
 .weatherResponse div {
   background-color: #fff;
   margin: 0;
-  width: min(200px, 100%);
+  width: min(156px, 100%);
   height: 70px;
   border-radius: .75rem;
   font-size: 1rem;
   font-weight: 600;
   display: flex;
-  /* flex-wrap: wrap; */
   align-items: center;
-  /* flex-direction: column; */
   columns: 2;
-  gap:1rem;
+  gap:.5rem;
   justify-content: flex-start;
+}
+.weatherResponse div:first-child {
+  width: min(300px, 100%);
 }
 .weatherResponse div p{
   word-wrap: break-word;
+  word-break:break-word;
+  hyphens:auto;
 padding: 0;
 margin: 0;
 }
@@ -225,12 +237,19 @@ margin: 0;
   margin-left: .5rem;
 }
 .error {
+  display: flex;
+  position: absolute;
+  flex-direction: row;
+  align-items: center;
+  justify-items:space-between;
+  justify-content:space-between;
+  font-size: 1.5rem;
   background-color: #fff;
   font-size: 1.5rem;
   color: rgb(245, 53, 53);
   border-radius: .75rem;
   width: min(calc(90vw - 2rem), calc(820px - 2rem));
-  align-self: start;
+  justify-self: start;
   margin: 0;
   padding: 1rem;
 }
